FileRenderer: pattern variable + lambda optimization
Signed-off-by: pizzi80 <paolo@given2.com>